# nsm

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt  run.bat
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_category_alter_uploadedfile_label_and_more.py  0002_uploadedfile_download_count.py  0003_profile.py  0003_remove_uploadedfile_download_count.py  0004_subjectgroup_uploadedfile_group.py
core/templates/: category_confirm_delete.html  category_form.html  change_password.html  delete_file.html  edit_file.html  file_list.html  login.html  staff_register.html  upload.html
notes_management_sys/: asgi.py  settings.py  urls.py  wsgi.py
nsms/: asgi.py  settings.py  urls.py  wsgi.py
pages/: urls.py  views.py
pages/templates/: home.html  public_files.html
static/css/: home.css  style.css  upload.css
static/js/: filter.js
templates/: base.html  category_list.html  dashboard.html  filter.html  footer.html  home.html  login.html  navbar.html  register.html  staff_profile.html  staff_register.html
templates/admin/: add_category.html  add_staff.html  admin_dashboard.html  category_list.html  dashboard.html  edit_category.html  edit_staff.html  manage_groups.html  manage_staff.html
templates/include/: head.html
templates/pages/: group_detail.html  group_list.html  resources.html
templates/staff/: add_category.html  category_list.html  dashboard.html  delete_category.html  delete_file.html  edit_category.html  edit_file.html  manage_files.html  staff_profile.html  upload_file.html
(+2 files in other folders)
