[project]
name = "nsm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "cffi==1.17.1",
    "cryptography==44.0.2",
    "django==5.2",
    "django-widget-tweaks==1.5.0",
    "mysqlclient==2.2.7",
    "pillow==11.2.1",
    "pycparser==2.22",
    "pymysql==1.1.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
